Add Loader and Image components

--- a/src/components/RandomPlanet/randomPlanet.module.scss
+++ b/src/components/RandomPlanet/randomPlanet.module.scss
@@ -3,6 +3,12 @@
   padding: 1rem;
 }
 
+.imageWrapper {
+  width: 150px;
+  height: 150px;
+  margin-right: 1rem;
+}
+
 .image {
   width: 150px;
   height: 150px;
@@ -11,7 +17,7 @@
 }
 
 .group {
-  margin: 1rem 0 0 1rem;
+  margin: 0;
 }
 
 .item {
