--- a/src/components/Item/item.module.scss
+++ b/src/components/Item/item.module.scss
@@ -4,9 +4,12 @@
   padding: 1rem;
 }
 
+.imageWrapper {
+  width: 150px;
+}
+
 .image {
-  width: 30%;
-  height: 30%;
+  width: 100%;
   border-radius: 10px;
 }
 
